src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>RFP</fullName>
        <description>R5 - RFP Support Process for Case</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>STS Request</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Duplicate</fullName>
        </values>
        <values>
            <fullName>Open</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Requirement</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Services</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed</fullName>
        </values>
        <values>
            <fullName>Contacted</fullName>
        </values>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Pending Customer Response</fullName>
        </values>
        <values>
            <fullName>Root Cause Found</fullName>
        </values>
        <values>
            <fullName>Solution Implemented</fullName>
        </values>
        <values>
            <fullName>Solution Provided</fullName>
        </values>
        <values>
            <fullName>Under Investigation</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ABB_Order_Number__c</fullName>
        <description>Ignore this field IF the Case is about Technical  Inquiry</description>
        <inlineHelpText>For Warranty Claim either Serial Number or ABB Order Number must be filled</inlineHelpText>
        <label>ABB Order Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>Contact.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_LSO_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R3 - 2101 Lookup to LSO object with Filter criteria for Account in Case</description>
        <label>Account LSO Reference Data</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>ERP_Reference_Data__c.Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ERP_Reference_Data__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Name_Formula__c</fullName>
        <description>A copy of the associated Account Name. This is used for Case History reports.</description>
        <formula>Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <formula>HYPERLINK(AccountId,Account_Name_Formula__c)</formula>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Article Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assigned_Date__c</fullName>
        <label>Resolution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <inlineHelpText>Enter value if Billable is checked.</inlineHelpText>
        <label>Billable Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>From Master Data Management Hierarchy</description>
        <inlineHelpText>Select the Business Unit that is responsible for resolving the case</inlineHelpText>
        <label>Business Unit</label>
        <picklist>
            <controllingField>Division__c</controllingField>
            <picklistValues>
                <fullName>DMDR - Drives and Controls</fullName>
                <color>#0B6FCE</color>
            </picklistValues>
            <picklistValues>
                <fullName>DMMG - Motors &amp; Generators</fullName>
                <color>#78C953</color>
            </picklistValues>
            <picklistValues>
                <fullName>DMPC - Power Conversion</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>DMRO - Robotics</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPBP - Building Products</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPBS - Breakers &amp; Switches</fullName>
                <color>#A53711</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPCP - Control Products</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPCW - Installation Products</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPLS - Electrification Solutions</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>EPMV - Medium Voltage Products</fullName>
                <color>#A845DC</color>
            </picklistValues>
            <picklistValues>
                <fullName>PACT - Control Technologies</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>PAMA - Marine &amp; Ports</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <picklistValues>
                <fullName>PAMP - Measurement &amp; Analytics</fullName>
                <color>#EFAE73</color>
            </picklistValues>
            <picklistValues>
                <fullName>PAOG - Oil, Gas &amp; Chemicals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PAPG - Power Generation</fullName>
                <color>#B6E32E</color>
            </picklistValues>
            <picklistValues>
                <fullName>PAPI - Process Industries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATU - Turbocharging</fullName>
                <color>#57F17C</color>
            </picklistValues>
            <picklistValues>
                <fullName>PGGA - Grid Automation</fullName>
                <color>#0B24BE</color>
            </picklistValues>
            <picklistValues>
                <fullName>PGGI - Grid Integration</fullName>
                <color>#641CCF</color>
            </picklistValues>
            <picklistValues>
                <fullName>PGGS - Grid Systems</fullName>
                <color>#66E9BD</color>
            </picklistValues>
            <picklistValues>
                <fullName>PGHV - High Voltage Products</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>PGTR - Transformers</fullName>
                <color>#F3D904</color>
            </picklistValues>
            <picklistValues>
                <fullName>ZCCO - Corporate</fullName>
                <color>#2F5D85</color>
            </picklistValues>
            <picklistValues>
                <fullName>ZCRE - Real Estate</fullName>
                <color>#AFCADF</color>
            </picklistValues>
            <picklistValues>
                <fullName>ZCVA - Various</fullName>
                <color>#8F6429</color>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCRP_Owner_Email__c</fullName>
        <label>Complaint Owner</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CCRP_Reference_Number_ID__c</fullName>
        <description>Integration Workstream : R5 : R-2189</description>
        <label>CCRP Reference Number ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRP_Reference_Number__c</fullName>
        <description>Integration Workstream : R5 : R-2189</description>
        <formula>HYPERLINK( $Label.INTEG_SYS_CCRP_Reference_Number_Url &amp; Complaint_ID__c,Complaint_Number__c)</formula>
        <label>CCRP Reference Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCRP_Status__c</fullName>
        <description>Integration Workstream : R5 : R-2190</description>
        <label>CCRP Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseCreatedbyMe__c</fullName>
        <description>Technical field to identify cases that were created by logged in user</description>
        <formula>IF( $User.Alias =  CreatedBy.Alias , true, false)</formula>
        <label>CaseCreatedbyMe</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Inquiry_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field captures the auto number which will be generated by the system. The field is read only on the layout. 

The Number is created as follows: 
YYYY Year of the current date 
MM Month of the current date 
DD Day of the current date (08) 
&quot;-&quot; a textual Hiphen 
XXXXX a 5 digit letter comparable with a flight number</description>
        <inlineHelpText>Contains the Reference Number of Lead if Case is generated from Lead. Use this number to search the related Lead in system.</inlineHelpText>
        <label>Lead Reference Number</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case_Number_Formula__c</fullName>
        <description>HYPERLINK(&quot;javascript:var html_doc = document.getElementsByTagName(&apos;head&apos;)[0]; var js =document.createElement(&apos;script&apos;);js.setAttribute(&apos;type&apos;,&apos;text/javascript&apos;);js.setAttribute(&apos;src&apos;,&apos;/support/console/33.0/integration.js&apos;);html_doc.appendChild(js); js.onload= function() {if(!sforce.console.isInConsole()){window.open(&apos;/&quot; &amp; Id &amp; &quot;&apos;);}else{sforce.console.generateConsoleUrl([&apos;/&quot; &amp; Id &amp; &quot;&apos;],function(result){sforce.console.openConsoleUrl(null,result.consoleUrl,true,[&apos;&apos;],[&apos;&quot; &amp; Case_Inquiry_Number__c &amp; &quot;&apos;],function(resulta){if(resulta.success){}});});}};&quot;, Case_Inquiry_Number__c)</description>
        <formula>HYPERLINK(&quot;javascript:try{srcUp(%27%2F&quot;&amp; Id &amp;&quot;%3Fisdtp%3Dvw%27);}catch(ex){window.location = &apos;/&quot; &amp; Id &amp; &quot;&apos;;}&quot;, Case_Inquiry_Number__c, &quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Resolution__c</fullName>
        <label>Case Resolution</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Workaround</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intrim Fix has been provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response From Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Update/Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On-Site Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provided requested information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround Provided</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replace Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Advice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade Hardware/Software/Firmware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved In CCRP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Substitute__c</fullName>
        <defaultValue>&quot;NA&quot;</defaultValue>
        <label>Case Substitute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Case Type</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Homologation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Factory Acceptance Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Inquiry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HelpDesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complaints</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Details</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Case Sub Type</label>
        <picklist>
            <controllingField>Category_2__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCRP/NPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT/IS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement (New, Refurbish, Retrofit)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Health Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Delivery Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Support Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level1__c</fullName>
        <description>R4.1 - New picklist field created to replace &quot;Channel class&quot; .
Channel classification code of the case.</description>
        <label>Channel Class Level1</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class_Level2__c</fullName>
        <description>R4.1 - New dependent picklist field created for Channel Class Level1. 
Channel classification code of the case.</description>
        <label>Channel Class Level2</label>
        <picklist>
            <controllingField>Channel_Class_Level1__c</controllingField>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Channel_Class__c</fullName>
        <label>Channel Class</label>
        <picklist>
            <picklistValues>
                <fullName>ABBINT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALCEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APBLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BTDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DEU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ELW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBDIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PABL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RSHO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPRO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWITCH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYIN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SYINMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDIS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <inlineHelpText>The city or nearest city where this site is located.</inlineHelpText>
        <label>Site City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commissioning_Date__c</fullName>
        <inlineHelpText>The date when the installation was commissioned.</inlineHelpText>
        <label>Commissioning Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complaint_ID__c</fullName>
        <label>Complaint ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Number__c</fullName>
        <label>Complaint Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Estimation__c</fullName>
        <label>Cost Estimation</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>TBD 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <inlineHelpText>Reference or case number / identifier from customer’s system.</inlineHelpText>
        <label>Customer Reference</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Warranty_enddate__c</fullName>
        <inlineHelpText>The date when the customer warranty for the Installation ends.</inlineHelpText>
        <label>Customer Warranty end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Warranty_startdate__c</fullName>
        <inlineHelpText>The date when the customer warranty for the Installation starts.</inlineHelpText>
        <label>Customer Warranty start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email2Case_Notification_sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email2Case Notification sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Group_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Group From</label>
        <referenceTo>Routing_Email__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_To_Case_Recipient__c</fullName>
        <description>Integration Workstream : R5 : R-2661</description>
        <label>Email To Case Recipient</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hours_Create_to_First_Resp_24__c</fullName>
        <description>The hours between the case create date and first response date is less than or equal to 24 hours. This is used for reporting.</description>
        <formula>AND(
NOT (ISNULL( X1st_Response__c )),
Hours_Create_to_First_Resp__c  &lt;= 24 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Create to First Resp ≤ 24</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_Create_to_First_Resp__c</fullName>
        <description>The hours between the case create date and first response date. This is used for reporting.</description>
        <formula>(Response_Time__c -  CreatedDate)  * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours Create to First Resp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_ID__c</fullName>
        <inlineHelpText>Unique identifier of the installation within ServIS. Generated automatically by ServIS.</inlineHelpText>
        <label>Installation ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_status__c</fullName>
        <inlineHelpText>Installation Status (e.g. Planned, Delivered, Running).</inlineHelpText>
        <label>Installation status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Request_site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Request site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Ref</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_to_Site_Registration__c</fullName>
        <formula>HYPERLINK(&apos;https://abb.sharepoint.com/sites/ServiceMarketTransparencyPortal/_layouts/15/start.aspx#/Lists/Contacts/AllItems.aspx#InplviewHash17eb2232-e163-4e60-8bf6-081f94cb5263=FolderCTID%3D0x012001-FilterFields1%3DJobTitle-FilterValues1%3DCountry%2520Installed%2520Base%2520Manager%253B%2523Regional%2520Installed%2520Base%2520Manager-FilterOp1%3DIn&apos;, &apos;Link&apos;)</formula>
        <label>Link to Site Registration</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <inlineHelpText>Legacy brand. Use the naming convention &quot;brand-city country code&quot;. E.g. &quot;Westinghouse - Munice, US&quot;, &quot;ABB - Turgi, CH&quot;.</inlineHelpText>
        <label>Manufacturer</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Date__c</fullName>
        <inlineHelpText>The date when the installation was produced.</inlineHelpText>
        <label>Manufacturing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Order_Number__c</fullName>
        <inlineHelpText>The factory production order reference number for the installation.</inlineHelpText>
        <label>Manufacturing Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master - Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>STS Request</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>STS_Child_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NPS_Error_Message__c</fullName>
        <label>NPS Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NPS_ID__c</fullName>
        <description>Integration Workstream : R5 : R-2521</description>
        <label>NPS ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Initiated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Initiated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Link__c</fullName>
        <formula>HYPERLINK(&quot;https://www.google.com&quot;,&apos;Link to NPS Survey&apos;)</formula>
        <label>NPS Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_List_of_Values__c</fullName>
        <formula>HYPERLINK(&apos;https://abb.sharepoint.com/sites/NPS/NPS/_layouts/15/WopiFrame.aspx?sourcedoc={F61451E9-9166-4E0D-8724-FC2F53D520E5}&amp;file=NPS%20Transactional%20Service%20BU%20vs%20Country%20coverage%20status%20file.xlsx&amp;action=default &apos;, &apos;Open NPS Sharepoint&apos;)</formula>
        <label>NPS List of Values</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Reminder_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Survey Reminder Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Score__c</fullName>
        <label>NPS Survey Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPS_Survey_Status__c</fullName>
        <label>NPS Survey Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NPS Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Installation__c</fullName>
        <formula>if(
   LEN(Serial_Number__c) &gt;= 3,
   Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/goto.php?SERIAL=&quot;&amp;Serial_Number__c,
   &apos;Open Installation for Serial Number - &apos;&amp;Serial_Number__c),
 IF(LEN(Purchase_Order_Number__c) &gt; 0, 
Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/pages/search.php?panel=resultstext&amp;freetext=&quot;&amp;Purchase_Order_Number__c,
&apos;Open Installation for Purchase Order Number - &apos;&amp;Purchase_Order_Number__c),
     if(LEN(Sales_Order_Number__c) &gt; 0, 
        Hyperlink(&quot;https://de-s-0199933.de.abb.com/servis/pages/search.php?panel=resultstext&amp;freetext=&quot;&amp;Sales_Order_Number__c,&apos;Open Installation for Sales Order Number - &apos; &amp;Sales_Order_Number__c),
       &apos;No data available&apos;)
    )
)</formula>
        <label>Open Installation</label>
        <type>Text</type>
    </fields>
</CustomObject>